--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "H e l g a B o t",
+  "name": "A b b a s B o t",
   "description": "whatsapp bot build with nodejs",
   "repository": "https://github.com/justpiple/whatsapp-bot",
   "logo": "https://i.postimg.cc/XNFmqpr1/76271a67a3e6162e0d0f80b1bc1d17f4.jpg",
