--- a/config.json
+++ b/config.json
@@ -8,6 +8,6 @@
 	"ownerList": ["62882000142827@s.whatsapp.net", "628995820020@s.whatsapp.net"],
 	"apiUrl": "https://api.zeks.me",
     "imgUrl": "https://i.postimg.cc/XNFmqpr1/76271a67a3e6162e0d0f80b1bc1d17f4.jpg",
-	"pack": "Yang Nyolong Nak Babi",
-	"author": "A b b a s B o t"
+	"pack": "Yang Nyolong gua nikahin",
+	"author": "A R I B o t"
 }
