--- a/config.json
+++ b/config.json
@@ -5,9 +5,9 @@
 	"autoRead": true,
 	"self": false, 
 	"maxLimit": 30,
-	"ownerList": ["62882000142827@s.whatsapp.net", "628995820020@s.whatsapp.net"],
+	"ownerList": ["62882000142827@s.whatsapp.net", "62882000142827@s.whatsapp.net"],
 	"apiUrl": "https://api.zeks.me",
     "imgUrl": "https://i.postimg.cc/XNFmqpr1/76271a67a3e6162e0d0f80b1bc1d17f4.jpg",
-	"pack": "Yang Nyolong Nak Babi",
-	"author": "A b b a s B o t"
+	"pack": "Yang Nyolong Nak SETAN ",
+	"author": "A R I B o t"
 }
